optimized code duplicacy and enhanced encapsulation in main method.